fixed pull request - added missing images (plus favicon) - added spacing for À propos and Contact us (and Accuiel)

--- a/webroot/less/styles.less
+++ b/webroot/less/styles.less
@@ -867,6 +867,9 @@ footer#footer {
     float: none;
     margin: 15px 0;
   }
+  .i-text {
+    margin-left: 10px;
+  }
   .navbar-collapse.collapse.in {
     display: block!important;
   }
